--- a/PageUsbVideo/res/layout/usb_video_frag_main.xml
+++ b/PageUsbVideo/res/layout/usb_video_frag_main.xml
@@ -14,11 +14,12 @@
     <Button
         android:id="@+id/bt"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
         android:text="@string/usb_video_desc"
         android:textColor="@android:color/black"
         android:textSize="40sp"
         android:textStyle="bold" />
+
 
 </RelativeLayout>
